src/main/k8/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teknichrono-http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "teknichrono"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # Enable client certificate authentication
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    # Specify the verification depth in the client certificates chain
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  tls:
  - hosts:
    - www.teknichrono.fr
    secretName: letsencrypt-certificate
  rules:
  - host: www.teknichrono.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teknichrono
            port:
              number: 8080
